# nl2sql

./: .env.local.example  .gitignore  README.md  config.py  hk_sea_cable_fault_info.csv  llm_factory.py  pyproject.toml  server.py  海缆段落方向静态关系表.csv
chains/: answer_formatter.py  entity_extractor.py  intent_router.py  pipeline.py  sql_generator.py
data/: sea_cable.db
data/dictionaries/: cable_aliases.json  city_aliases.json  segment_aliases.json
etl/: build_dictionary.py  clean_fault_data.py
models/correction/: finetune.py  predict.py
models/ner/: generate_training_data.py  predict.py  train.py
models/ner/training_data/: test.jsonl  train.jsonl  val.jsonl
prompts/: answer.py  intent.py  text2sql.py
